--- a/src/Sections/SectionsSCSS/About.scss
+++ b/src/Sections/SectionsSCSS/About.scss
@@ -6,12 +6,14 @@
 }
 
 .aboutHolder{
-    width: calc(100% - 50px);
-    height: 100vh;     
+    width: 100vw;
+    height: 100%;     
     justify-content: center;
     align-items: center;
     display: flex;
     background-color: black;
+    transition: 1s;
+    overflow: hidden;
 }
 
 .about{
@@ -71,5 +73,73 @@
         }
 
         }
+    }   
+}
+
+//mobile optimised
+.mobileAbout{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    overflow: scroll;
+
+    .aboutTop{
+        height: 200px;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+
+        .aboutPic{
+            height: 80%;
+        }
+
+        h1{
+            @include homefont();
+            font-size: 2em;
+            padding-left: 50px;
+        }
+
+    }
+
+    .aboutBottom{
+        display: flex;
+        flex-direction: column;
+        margin-bottom: 150px;
+
+        .aboutText {
+            width: 100vw;
+            h1{
+                @include homefont();
+            }
+
+            p {
+                color: white;
+                text-transform: none;
+            }
+        }
+        
+    .amSkillsHolder {   
+        display: flex;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        font-size: 80%;
+        justify-content: space-around;
+        width: 90%;
+
+        .amSkills {
+            display: flex;
+            flex-direction: column;
+            flex-wrap: wrap;
+            text-transform: none;
+            width: 300px;
+            list-style-type: none;
+
+            h1{
+                @include homefont();
+            }
+
+            }
+    }
     }   
 }
