--- a/src/Sections/SectionsSCSS/Projects.scss
+++ b/src/Sections/SectionsSCSS/Projects.scss
@@ -13,6 +13,7 @@
     align-items: center;
     display: flex;
     background-color: black;
+    overflow: hidden;
 
     .projectCardHolder {
         width: 1000px;
@@ -59,4 +60,53 @@
 
         }
     }
+
+    .mobileProjectCardHolder {
+        width: 100vw;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        margin: auto;
+        padding-top: 20px;
+        overflow: scroll;
+        margin-bottom: 100px;
+
+        .projectTitle{
+            width: 900px;
+            height: 100px;
+            margin: 15px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 2em;
+        }
+
+        .projectCard{
+            margin: 15px;
+        
+            .projectUsed {
+                background-color: white;
+                color: black;
+                padding: 2px;
+                display: flex;
+                justify-content: space-around;
+            }
+
+            img{
+                width: 300px;
+                height: 300px;
+                background-color: white;
+            }
+
+            p{
+                width: calc(100%-30px);
+                height: 40px;
+                background-color: white;
+                color: black;
+                margin-top: 10px;
+            }
+
+        }
+    }
+
 }
