--- a/src/Sections/SectionsSCSS/Contact.scss
+++ b/src/Sections/SectionsSCSS/Contact.scss
@@ -6,7 +6,8 @@
 }
 
 .contactHolder{
-    height: 100vh;     
+    height: 100vh;
+    width: 100vw;     
     flex-direction: column;
     justify-content: center;
     align-items: center;
