--- a/src/Sections/SectionsSCSS/Home.scss
+++ b/src/Sections/SectionsSCSS/Home.scss
@@ -41,6 +41,15 @@
         padding-right: 40px;
         background-color: black;
 
+        .homeTextBlur {
+            position: absolute;
+            left: -50px;
+            width: 50px;
+            height: 100%;    
+            display: flex;
+            background-image:linear-gradient(to right, rgba(0,0,0,0), rgb(0, 0, 0));
+        }
+
         h1{
             margin-top: 150px;
             font-size: 3em;
@@ -112,7 +121,7 @@
         width: 0px;
         position: fixed;
         z-index: 1;
-        left: 0px;
+        left: -10px;
         display: flex;
         color: white;
         @include homefont();
