--- a/src/Sections/SectionsSCSS/Projects.scss
+++ b/src/Sections/SectionsSCSS/Projects.scss
@@ -23,7 +23,7 @@
         margin: 50px;
         overflow: scroll;
 
-        .projectTitle{
+        .projectTitle {
             width: 900px;
             height: 100px;
             margin: 15px;
@@ -33,8 +33,24 @@
             font-size: 2em;
         }
 
-        .projectCard{
+        .projectCard {
             margin: 15px;
+            position: relative;
+
+            .projectHover {
+                position: absolute;
+                width: 270px;
+                height: 270px;
+                opacity: 0;
+                background-color: black;
+                transition: 0.7s;
+                padding: 15px;
+            }
+
+            .projectHover:hover {
+                opacity: 0.8;
+                transition: 0.7s;
+            }
         
             .projectUsed {
                 background-color: white;
@@ -50,12 +66,10 @@
                 background-color: white;
             }
 
-            p{
-                width: calc(100%-30px);
-                height: 40px;
-                background-color: white;
-                color: black;
+            p, h1{
                 margin-top: 10px;
+                text-transform: none;
+                color: white;
             }
 
         }
