--- a/src/Sections/SectionsSCSS/About.scss
+++ b/src/Sections/SectionsSCSS/About.scss
@@ -7,12 +7,11 @@
 
 .aboutHolder{
     width: 100vw;
-    height: 100%;     
+    height: 100vh;     
     justify-content: center;
     align-items: center;
     display: flex;
     background-color: black;
-    transition: 1s;
     overflow: hidden;
 }
 
