--- a/src/Sections/SectionsSCSS/About.scss
+++ b/src/Sections/SectionsSCSS/About.scss
@@ -8,7 +8,7 @@
 .aboutHolder{
     width: 100vw;
     height: 100vh;     
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     display: flex;
     background-color: black;
@@ -16,20 +16,29 @@
 }
 
 .about{
-    width: 80%;
+    //margin: auto;
+    // width: calc(100%-50px);
     max-width: 1000px;
-    min-width: 1000px;
-    height: 100%;
+    //min-width: 1000px;
+    height: 100vh;
     display: flex;
     flex-wrap: wrap;
+    //justify-content: flex-start;
+    //align-items: flex-start;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    //background-color: green;
 
     .aboutTop{
         height: 200px;
-        width: 1000px;
+        //min-width: 600px;
+        width: 100%;
         margin-top: 100px;
+        // padding-right: 100px; 
         display: flex;
         flex-direction: row;
         align-items: center;
+        //background-color: aquamarine;
 
         .aboutPic{
             height: 100%;
@@ -37,18 +46,28 @@
 
         h1{
             @include homefont();
-            font-size: 5em;
-            padding-left: 50px;
+            font-size: 4em;
+            margin: auto;
+            //padding-left: 50px;
         }
 
     }
 
     .aboutBottom{
+        //min-width: 530px;
+        width: 100%;
         display: flex;
         flex-direction: row;
+        //background-color: aquamarine;
 
         .aboutText {
             width: 630px;
+            padding: 10px;
+            padding-right: 0px;
+            //background-color: pink;
+            margin-left: auto;
+            margin-right: auto;
+            
             h1{
                 @include homefont();
             }
@@ -64,8 +83,10 @@
         flex-direction: column;
         flex-wrap: wrap;
         text-transform: none;
-        width: 300px;
+        min-width: 140px;
         list-style-type: none;
+        //background-color: red;
+        padding: 10px;
 
         h1{
             @include homefont();
