--- a/src/Sections/SectionsSCSS/Projects.scss
+++ b/src/Sections/SectionsSCSS/Projects.scss
@@ -6,25 +6,26 @@
 }
 
 .projectHolder{
-    width: calc(100% - 50px);
+    //width: calc(100% - 50px);
     height: 100vh;     
     flex-direction: column;
-    justify-content: center;
     align-items: center;
     display: flex;
     background-color: black;
-    overflow: hidden;
+    overflow: scroll;
 
     .projectCardHolder {
-        width: 1000px;
+        //width: 1000px;
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
         margin: 50px;
-        overflow: scroll;
+        //margin-top: 300px;
+        //overflow: scroll;
 
         .projectTitle {
-            width: 900px;
+            flex-basis: 900px;
+            //width: 900px;
             height: 100px;
             margin: 15px;
             display: flex;
