--- a/src/Sections/SectionsSCSS/Contact.scss
+++ b/src/Sections/SectionsSCSS/Contact.scss
@@ -7,17 +7,20 @@
 
 .contactHolder{
     height: 100vh;
-    width: 100%;     
+    width: 100vw;     
     flex-direction: column;
-    display: flex;
-    justify-content: center;
-    //background-color: green;
+    //display: flex;
+   
+    background-color: black;
     overflow: hidden;
     
     
     .contact{
-        width: 700px;
+        max-width: 700px;
+       // max-width: 700px;
+        //margin: auto;
         margin: auto;
+        margin-top: calc(50vh - 185px);
         height: 370px;
         display: flex;
         flex-direction: column;
