--- a/src/Sections/SectionsSCSS/Contact.scss
+++ b/src/Sections/SectionsSCSS/Contact.scss
@@ -58,6 +58,7 @@
 
     .mobileContact{
         min-width: 95vw;
+        margin-top: calc(50vh - 185px);
         height: 370px;
         display: flex;
         flex-direction: column;
