--- a/src/Sections/SectionsSCSS/Projects.scss
+++ b/src/Sections/SectionsSCSS/Projects.scss
@@ -67,61 +67,83 @@
                 background-color: white;
             }
 
-            p, h1{
+            p, h1, a{
                 margin-top: 10px;
                 text-transform: none;
                 color: white;
+                cursor: default;
             }
 
+            a{
+                cursor: pointer;
+            }
         }
     }
 
     .mobileProjectCardHolder {
-        width: 100vw;
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        margin: auto;
-        padding-top: 20px;
-        overflow: scroll;
-        margin-bottom: 100px;
-
-        .projectTitle{
-            width: 900px;
-            height: 100px;
-            margin: 15px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-size: 2em;
-        }
-
-        .projectCard{
-            margin: 15px;
-        
-            .projectUsed {
-                background-color: white;
-                color: black;
-                padding: 2px;
+    
+            .projectTitle {
+                flex-basis: 900px;
+                //width: 900px;
+                height: 100px;
+                color: green;
                 display: flex;
-                justify-content: space-around;
+                justify-content: center;
+                align-items: center;
+                font-size: 2em;
             }
-
-            img{
-                width: 300px;
-                height: 300px;
-                background-color: white;
-            }
-
-            p{
-                width: calc(100%-30px);
-                height: 40px;
-                background-color: white;
-                color: black;
-                margin-top: 10px;
-            }
-
         }
-    }
+//         width: 100vw;
+//         display: flex;
+//         flex-wrap: wrap;
+//         justify-content: center;
+//         align-items: center;
+//         background-color: green;
+//         margin: auto;
+//         padding-top: 5px;
+//         overflow: scroll;
+//         margin-bottom: 100px;
+
+//         .projectTitle{
+//             width: 900px;
+//             height: 100px;
+//             margin: 5px;
+//             display: flex;
+//             justify-content: center;
+//             align-items: center;
+//             font-size: 2em;
+//         }
+
+//         .projectCard{
+//             margin: 15px;
+
+//             .projectHover {
+//                 background-color: white;
+
+//                 h1, p{
+//                     width: calc(100%-30px);
+//                     background-color: white;
+//                     color: black;
+//                     text-decoration: none;
+//                     margin-top: 10px;
+//                 }
+
+//             }
+        
+//             .projectUsed {
+//                 background-color: white;
+//                 width: 296px;
+//                 padding: 2px;
+//                 display: flex;
+//                 justify-content: space-around;
+//             }
+
+//             img{
+//                 width: 300px;
+//                 height: 300px;
+//                 background-color: white;
+//             }
+//         }
+//     }
 
 }
