Fixed formatting issues in project section, added new projects

--- a/src/Sections/SectionsSCSS/About.scss
+++ b/src/Sections/SectionsSCSS/About.scss
@@ -23,8 +23,9 @@
     height: 100vh;
     display: flex;
     flex-wrap: wrap;
-    //justify-content: flex-start;
-    //align-items: flex-start;
+    //justify-items: center;
+    align-content: flex-start;
+    //align-items: space-between;
     overflow-y: scroll;
     overflow-x: hidden;
     //background-color: green;
@@ -58,6 +59,7 @@
         width: 100%;
         display: flex;
         flex-direction: row;
+        margin-top: 70px;
         //background-color: aquamarine;
 
         .aboutText {
