--- a/src/Sections/SectionsSCSS/Projects.scss
+++ b/src/Sections/SectionsSCSS/Projects.scss
@@ -7,6 +7,7 @@
 
 .projectHolder{
     //width: calc(100% - 50px);
+    width: 100vw;
     height: 100vh;     
     flex-direction: column;
     align-items: center;
@@ -15,7 +16,7 @@
     overflow: scroll;
 
     .projectCardHolder {
-        //width: 1000px;
+        max-width: 1000px;
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
@@ -24,8 +25,10 @@
         //overflow: scroll;
 
         .projectTitle {
-            flex-basis: 900px;
+            flex-basis: 100%;
+            // flex-basis: 900px;
             //width: 900px;
+            // width: 100%;
             height: 100px;
             margin: 15px;
             display: flex;
@@ -68,6 +71,8 @@
             }
 
             p, h1, a{
+                font-size: 0.8em;
+                line-height: 120%;
                 margin-top: 10px;
                 text-transform: none;
                 color: white;
